<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tx_cabecera">Reproducir sonidos al dar al boton</string>
    <string name="b_gato">GATO</string>
    <string name="b_muelle">MUELLE</string>
    <string name="b_risa">RISA</string>
    <string name="b_tambor">TAMBOR</string>
    <string name="b_torme">TORMENTA</string>
    <string name="b_grillos">GRILLOS</string>
    <string name="tx_volumen">Volumen</string>
    <string name="tx_balance">Balance</string>
    <string name="tx_velocidad">Speed</string>

</resources>
