<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.laura.audio.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="22dp"
        android:text="@string/tx_cabecera" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/b_gato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_gato" 
            android:onClick="clickHandler"/>

        <Button
            android:id="@+id/b_muelle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_muelle" 
            android:onClick="clickHandler"/>

        <Button
            android:id="@+id/b_grillos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_grillos"
            android:onClick="clickHandler" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/b_risa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_risa" 
            android:onClick="clickHandler"/>

        <Button
            android:id="@+id/b_tambor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_tambor"
            android:onClick="clickHandler" />

        <Button
            android:id="@+id/b_tormenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_torme"
            android:onClick="clickHandler" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/volBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="100"
        android:layout_marginTop="25dp"
        android:progress="70" />

    <TextView
        android:id="@+id/tx_volumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tx_volumen" />

    <SeekBar
        android:id="@+id/balBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="200"
        android:layout_marginTop="20dp"
        android:progress="100" />

    <TextView
        android:id="@+id/tx_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tx_balance" />

    <SeekBar
        android:id="@+id/SpeedBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="200"
        android:layout_marginTop="20dp"
        android:progress="100"  />

    <TextView
        android:id="@+id/tx_Velocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tx_velocidad" />

</LinearLayout>
